# milvus-rag-plugin

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
milvus_rag/: __init__.py  __main__.py  config.py  corpus.py  descriptions.py  embed.py  search.py  server.py
plugins/milvus-rag/: .mcp.json
plugins/milvus-rag/.codex-plugin/: plugin.json
