[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milvus-rag"
version = "0.1.0"
description = "Milvus 컬렉션을 Codex 업무 지식베이스로 연결하는 RAG 플러그인입니다."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ByungjinChung - AI Design Lab" }]
keywords = ["codex", "mcp", "milvus", "retrieval", "rag", "agentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymilvus>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ByungjinChung/milvus-rag-plugin"

[project.scripts]
milvus-rag = "milvus_rag.server:main"

[tool.setuptools.packages.find]
include = ["milvus_rag*"]
